<resources>
    <string name="app_name">PartyEC</string>
    <!--Local publish-->
    <!--<string name="url" translatable="false">http://192.168.1.109:456/</string>-->
    <!--<string name="offers_code">2072</string>-->
    <!--<string name="occasion_code">2063</string>-->
    <!--<string name="url" translatable="false">http://192.168.1.110:97/</string>-->

    <!--Web publish-->
    <string name="url" translatable="false">http://jdadmin-001-site5.itempurl.com/</string>
    <string name="offers_code">1080</string>
    <string name="occasion_code">1079</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="shop_by_occasion">Shop by Occasion</string>
    <string name="offers">Offers</string>
    <string name="register_an_event">Register an Event</string>
    <string name="view_orders">View Orders</string>
    <string name="view_bookings">View Bookings</string>
    <string name="view_quotations">View Quotations</string>
    <string name="contact_us">Contact Us</string>
    <string name="your_partyec">Your PartyEC</string>
    <string name="title_activity_category_list">Category List</string>
    <string name="search">Search</string>
    <string name="wishlist">Wishlist</string>
    <string name="no_items_to_display">Nothing to display</string>
    <string name="back">Back</string>
    <string name="title_activity_login">Login</string>
    <string name="enter_otp">Please enter OTP sent to your mail</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_register_event">Register Event</string>
    <string name="e_mail_m">E-mail*</string>
    <string name="phone_m">Phone*</string>
    <string name="name_m">Name*</string>
    <string name="requirements">Requirements</string>
    <string name="looking_for_m">Looking for*</string>
    <string name="looking_for">Looking for</string>
    <string name="budget">Budget</string>
    <string name="number_of_persons_m">Number of persons*</string>
    <string name="date_and_time_m">Date and Time*</string>
    <string name="event_type_m">Event Type*</string>
    <string name="event_name_m">Event Name*</string>
    <string name="submit">Submit</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="are_mandatory">* are mandatory</string>
    <string name="give_valid">Give valid information</string>
    <string name="select_event_type">Select event type</string>
    <string name="select_time_optional">Select Time (Optional)</string>
    <string name="no_time">Skip Time</string>
    <string name="message">Message</string>
    <string name="contact_me_by">Contact me by</string>
    <string name="login_description">By creating an account with us, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</string>
    <string name="title_activity_product_list">Product List</string>
    <string name="view_all">View all</string>
    <string name="filter">Filter</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="comment_m">Comment*</string>
    <string name="change_view">Change View</string>
    <string name="no_items">No items</string>
    <string name="your_name_m">Your Name*</string>
    <string name="retrying">Retrying…</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="apply">Apply</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="reviews">Reviews</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="price_display">%1$s QR</string>
    <string name="wishlist_days">%1$s days in Wishlist</string>
    <string name="price">Price:</string>
    <string name="order_total">Order Total: %1$s QR</string>
    <string name="item_total">Item Total: %1$s QR</string>
    <string name="order_status">Order Status: %1$s</string>
    <string name="order_no">Order No: %1$s</string>
    <string name="order_dates">Order Date: %1$s</string>
    <string name="required_dates">Required Date: %1$s</string>
    <string name="booking_dates">Booking Date: %1$s</string>
    <string name="booking_status">Booking Status: %1$s</string>
    <string name="booking_no">Booking No: %1$s</string>
    <string name="quotation_dates">Quotation Date: %1$s</string>
    <string name="quotation_status">Quotation Status: %1$s</string>
    <string name="quotation_no">Quotation No: %1$s</string>
    <string name="buy">Buy</string>
    <string name="book">Book</string>
    <string name="req_quotation">Request quotation</string>
    <string name="ratings_amp_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="title_activity_list_views">ListViewsActivity</string>
    <string name="related_items">Related Items</string>
    <string name="view_all_related_items">View all related items</string>
    <string name="select_date">Select date</string>
    <string name="available_options">Available options</string>
    <string name="some_error_at_server">Some error at server</string>
    <string name="added_to_wishlist">Added to Wishlist</string>
    <string name="contact_us_email">Contact Us Request Send Successfully</string>
    <string name="removed_from_wishlist">Removed from Wishlist</string>
    <string name="required_date">Required date</string>
    <string name="optional">Optional</string>
    <string name="location_colon">Location :</string>
    <string name="city_colon">City :</string>
    <string name="country_colon">Country :</string>
    <string name="contact_no_colon">Contact No :</string>
    <string name="billing_address">Billing Address</string>
    <string name="change">Change</string>
    <string name="address">Address</string>
    <string name="new_address">New address</string>
    <string name="select_address">Select Address</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="mid_name">Mid Name</string>
    <string name="last_name">Last Name</string>
    <string name="state_province_colon">State/Province :</string>
    <string name="please_wait">Please wait…</string>
    <string name="not_selecting">Not selected</string>
    <string name="cart">Cart</string>
    <string name="quantity_display">Quantity : %1$s</string>
    <string name="quantity">Quantity</string>
    <string name="price_display_2">Price : %1$s QR</string>
    <string name="shipping_charge">Shipping charge : %1$s QR</string>
    <string name="cart_item_total">Item total : %1$s QR</string>
    <string name="tax_amount">Tax Amount : %1$s QR</string>
    <string name="total_price">Total Price : %1$s QR</string>
    <string name="total_amount">Total Amount : %1$s QR</string>
    <string name="total_discount">Total discount : %1$s QR</string>
    <string name="total_shipping">Total delivery charges : %1$s QR</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_item_q">Do you want to remove this item from cart?</string>
    <string name="remove_address_q">Do you want to remove this address?</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="same_as_shipping_address">Same as shipping address</string>
    <string name="proceed">Proceed</string>
    <string name="make_payment">Make Payment</string>
    <string name="failed_try_again">Failed attempt. Please try again</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="login_signup">Login / SignUp</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="otp_incorrect">OTP is incorrect</string>
    <string name="please_login">Please Login</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="orders">Orders</string>
    <string name="history">History</string>
    <string name="select_default">Set as Default</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="default_address">Default Address</string>
    <string name="no_filters_available">No filters available</string>
    <string name="payment">Payment</string>
    <string name="no_items_available">No items available</string>
    <string name="payment_method">Payment Method</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="place_order">Place Order</string>
    <string name="stock_not_available">Stock not available</string>
    <string name="request_history">Request History</string>
    <string name="no_of_persons_value">No of persons : %1$s</string>
    <string name="budget_value">Budget : %1$s</string>
    <string name="event_request_success">Event request is submitted successfully</string>
    <string name="select">Select</string>
    <string name="skip">Skip</string>
    <string name="add_or_change">Add/Change</string>
    <string name="select_this_address">Select this address</string>
    <string name="add_an_address_request">Please add an address</string>
    <string name="add_an_address_to_your_account_request">Please add an address to your account</string>
    <string name="rate_it">Rate it!</string>
    <string name="approved">Approved</string>
    <string name="approval_pending">Approval pending</string>
    <string name="request_to_provide_input">Please provide %1$s</string>
    <string name="please_select_location">Please select shipping address having location</string>
    <string name="title_activity_search">Search</string>
    <string name="enter_to_search">Enter to search in products</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_galley">Choose from Gallery</string>
    <string name="network_off_alert">Please turn on internet</string>
    <string name="contact_to_buy">Contact PartyEC to enquire about buying options</string>
</resources>
