<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_shop_by_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/shop_by_category" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/shop_by_occasion" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/offers" />
    </group>

    <item android:title="@string/your_partyec">
        <menu>
            <item
                android:id="@+id/nav_favourites"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/favourites" />
            <item
                android:id="@+id/nav_view_orders"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/view_orders" />
            <item
                android:id="@+id/nav_view_bookings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/view_bookings" />
            <item
                android:id="@+id/nav_view_quotations"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/view_quotations" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
        </menu>
    </item>


</menu>
