<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/cart_items"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <TextView
            android:id="@+id/event_req_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request number"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_type"
            android:text="@string/event_type_m"
            android:textColor="@color/primary_text"
            android:paddingLeft="7dp"
            android:paddingStart="7dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_name"
        android:text="Event Name"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textColor="@color/primary_text"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_time"
            android:text="Time"
            android:textColor="@color/primary_text"
            android:paddingLeft="7dp"
            android:paddingStart="7dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/looking_for"
        android:text="@string/looking_for"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/req_specification"
        android:text="@string/requirements"
        android:textColor="@color/secondary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:text="@string/message"
        android:textColor="@color/secondary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="12sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <TextView
            android:id="@+id/no_of_persons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_persons_value"
            android:textColor="@color/primary_text"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/budget"
            android:text="@string/budget_value"
            android:textColor="@color/primary_text"
            android:paddingLeft="7dp"
            android:paddingStart="7dp"
            android:textSize="13sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/request_status"
        android:text="Request Status"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="end"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/admin_remark"
        android:text="Admin Remarks"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="14sp"
        android:gravity="end"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total_price"
        android:text="@string/total_price"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="12sp"
        android:gravity="end"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tax_amount"
        android:text="@string/tax_amount"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="12sp"
        android:gravity="end"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/discount_amount"
        android:text="@string/total_discount"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="12sp"
        android:gravity="end"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total_amount"
        android:text="@string/total_amount"
        android:textColor="@color/primary_text"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="end"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>